fix: overflow on body when a filter is applied

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -14,7 +14,7 @@ body {
 	font-family: Figtree, Arial, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
 		Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	text-rendering: optimizeLegibility;
-
+	overflow-x: hidden;
 	height: 100vh;
 }
 
